# Cadmium-Player-Substitution-System

./: CMakeLists.txt  DEVSmodelsForm.docx  README.md  build_esp.sh  build_rt.sh  build_sim.sh  sdkconfig.old
input_data/game_score/: team_1_score_test.txt  team_2_score_test.txt
input_data/player/: game_state_test.txt  substitution_test.txt
input_data/substitution_logic/: game_state_test.txt  player_1.txt  player_2.txt
input_data/top/: team_1_score_test.txt  team_2_score_test.txt
main/: CMakeLists.txt  main.cpp
main/include/atomic/: game_score.hpp  player.hpp  substitution_logic.hpp
main/include/coupled/: team.hpp
main/include/data_structures/: utils.cpp  utils.hpp
main/include/test/game_score/: game_score_tester.hpp  main_game_score_tester.cpp
main/include/test/player/: main_player_tester.cpp  player_tester.hpp
main/include/test/substitution_logic/: main_substitution_logic_tester.cpp  substitution_logic_tester.hpp
main/include/top/: coah.hpp
